# allure_cli

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: publish.yml
allure_cli/: __init__.py  __main__.py  cli.py  client.py
